// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemoveModal /> Modal.Footer renders a confirmation button 1`] = `
<Button
  bsStyle="danger"
  icon="check"
  pullRight={false}
  tipPlacement="top"
>
  Confirm
</Button>
`;

exports[`<RemoveModal /> renders a bootstrap Modal component when [show=true] 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="modal-danger"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    Remove 
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <span>
      Are you sure you want to remove 
      <strong />
      ?
    </span>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <Button
      bsStyle="danger"
      icon="check"
      pullRight={false}
      tipPlacement="top"
    >
      Confirm
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<RemoveModal /> renders correctly 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="modal-danger"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    Remove 
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <span>
      Are you sure you want to remove 
      <strong />
      ?
    </span>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <Button
      bsStyle="danger"
      icon="check"
      pullRight={false}
      tipPlacement="top"
    >
      Confirm
    </Button>
  </ModalFooter>
</Modal>
`;
